--- a/Portal.Client/Components/UIComponents/SideNav.razor
+++ b/Portal.Client/Components/UIComponents/SideNav.razor
@@ -59,9 +59,10 @@
     private readonly List<NavLinkItem> navLinks = new()
     {
         new NavLinkItem { Link = "", Title = "Home", Icon = Icons.Material.Filled.Home, MatchAll = true },
-        new NavLinkItem { Link = "Jobs", Title = "Jobs", Icon = Icons.Material.Filled.Warehouse },
-        new NavLinkItem { Link = "Quotes", Title = "Quotes", Icon = Icons.Material.Filled.Checklist },
-        new NavLinkItem { Link = "Councils", Title = "Councils", Icon = Icons.Material.Filled.FormatListNumbered },
+        new NavLinkItem { Link = "Jobs", Title = "Jobs", Icon = Icons.Material.Filled.PanTool },
+        new NavLinkItem { Link = "Quotes", Title = "Quotes", Icon = Icons.Material.Filled.Numbers },
+        new NavLinkItem { Link = "Contacts", Title = "Contacts", Icon = Icons.Material.Filled.People },
+        new NavLinkItem { Link = "Councils", Title = "Councils", Icon = Icons.Material.Filled.Home },
         new NavLinkItem { Link = "Schedule", Title = "Schedule", Icon = Icons.Material.Filled.CalendarViewMonth },
         new NavLinkItem { Link = "Settings", Title = "Settings", Icon = Icons.Material.Filled.Settings }
     };
