--- a/Portal.Client/Components/UIComponents/SideNav.razor.css
+++ b/Portal.Client/Components/UIComponents/SideNav.razor.css
@@ -66,6 +66,7 @@
     .nav-item ::deep a {
         color: var(--color-primary);
         border-radius: var(--border-rad);
+
         height: 3rem;
         display: flex;
         align-items: center;
@@ -76,6 +77,7 @@
         .nav-item ::deep a.active {
             background-color: var(--color-background);
             color: var(--color-secondary) !important;
+            border: 1px solid #e2e8f0;
         }
 
         .nav-item ::deep a:hover {
