--- a/Portal.Client/wwwroot/css/app.css
+++ b/Portal.Client/wwwroot/css/app.css
@@ -1,8 +1,7 @@
 ﻿
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
-    /*--color-primary: #ff5020;*/
     --color-primary: #27213C;
     --color-primary-light: #ff957d;
     --color-secondary: #F49D37;
@@ -14,8 +13,8 @@
     --color-yellow: #a16207;
     --border-rad: 10px;
     --padding: 10px;
-    --colour-survey: #748CAB;
-    --colour-construction: #AEF6C7;
+    --colour-survey: #7DCE82;
+    --colour-construction: #FF8360;
     --mud-ripple-color: var(--color-primary) !important;
     --mud-palette-primary: var(--color-primary) !important;
     --mud-palette-secondary: var(--color-secondary) !important;
@@ -28,7 +27,7 @@ body {
     background-color: var(--color-background) !important;
     transition: color 0.5s, background-color 0.5s;
     line-height: 1.6;
-    font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
     font-size: 15px;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -69,8 +68,7 @@ h1 {
     font-weight: 800;
 }
 
-a,
-.btn-link {
+a.btn-link {
     color: #1c1b1d;
     text-decoration: none;
     font-size: 20px;
@@ -179,6 +177,10 @@ a {
     border-radius: var(--border-rad);
     box-shadow: none;
     background-color: var(--color-primary) !important;
+}
+.mud-button-filled.mud-button-filled-error {
+    border-radius: var(--border-rad);
+    box-shadow: none;
 }
 
 .mud-button-filled.mud-button-filled-success {
